<resources>
    <string name="app_name">SER423 Lab 1 App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World</string>
    <string name="add_location">Add Location</string>
    <string name="modify_locations">Modify Location</string>
    <string name="alert">Alert</string>
    <string name="dialog_message">Hello Android Developer</string>
    <string name="dialog_title">Sample Alert Dialog</string>
    <string name="dialog_close">OK</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="title_places_toast_activity">PlaceToastActivity</string>
    <string name="delete_location">Delete Location</string>
    <string name="update_location">Update Location</string>
    <string name="title_activity_place_view">Place Details</string>
    <string name="title_activity_add_location">Add Location</string>
    <string name="location_name">Location Name</string>
    <string name="location_address_title">Location Address Title</string>
    <string name="location_address_street">Location Address Street</string>
    <string name="location_longitude">Location Longitude</string>
    <string name="location_elevation">Location Elevation</string>
    <string name="location_latitude">Location Latitude</string>
    <string name="location_description">Location Description</string>
    <string name="location_category">Location Category</string>
    <string name="location_image">Location Image</string>
    <string name="calculate_distance">Calculate Distance</string>
    <string name="title_activity_distance_calculation">Distance and Bearing Calculation</string>
    <string name="compare">Compare</string>
    <string name="done">Done</string>
    <string name="defaultUrl">http://10.0.2.2:8080</string>
</resources>
