<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/display_relative_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.asu.bsse.gcarvaj3.ser423labapp.PlaceViewActivity"
    tools:showIn="@layout/activity_place_view">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="213dp"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="88dp" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="67dp"
        android:text="@string/dialog_close"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="49dp" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_text"
        android:layout_marginStart="64dp"
        android:layout_marginTop="226dp"
        android:layout_toEndOf="@+id/update_button"
        android:text="@string/delete_location"
        app:layout_constraintStart_toEndOf="@+id/close_button"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="222dp"
        android:text="@string/update_location"
        app:layout_constraintStart_toEndOf="@+id/delete_button"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/update_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:visibility="gone"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/calculate_distance_button"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:layout_below="@+id/update_button"
        android:layout_alignStart="@+id/update_button"
        android:layout_marginStart="15dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="105dp"
        android:layout_toStartOf="@+id/close_button"
        android:text="@string/calculate_distance" />
</RelativeLayout>